--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+artifacts
+catboost_info
+logs
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
